# FEA2

./: .gitignore  CMakeLists.txt  FEA2.h  README.md  main  main.cpp
data/abaqus_c2d4_1/: .~lock.U.csv#  F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  nodes.csv
data/abaqus_c3d8_2/: .~lock.abaqus_viga1r_c3d8.csv#  .~lock.nodes.txt#  F.csv  FEAData.csv  K.csv  KFU.csv  K_b.csv  U.csv  abaqus_c3d8_2.csv  nodes.csv  nodes.txt
data/abaqus_c3d8_3/: .~lock.Book1.xlsx#  Book1.xlsx  K_a.csv  nodes.csv
data/c3d6_1/: F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  nodes.csv
data/c3d6_2/: F.csv  FEAData.csv  KFU.csv  K_a.csv  K_b.csv  U.csv  nodes.csv
g2o_legacy/FEA/include/: FEA2.h
g2o_legacy/FEA/src/: FEA2.cc
py/: b.py
src/: FEA2.cpp  FEA2.h  aux.h  main.cpp  main2.cpp  test_models.cpp
src/data/: aux.cpp  aux.hpp  data.cpp  data.hpp
src/dataset/: CMakeLists.txt  test_models.cpp
src/fe/: CMakeLists.txt  fe.cpp  fe.hpp
src/fea/: CMakeLists.txt  boundary_conditions.cpp  boundary_conditions.hpp  fea.cpp  fea.hpp  fea2.cpp  fea2.hpp  fem.cpp  fem.hpp  pos.cpp  pos.hpp  solver.cpp  solver.hpp
src/fea/bcs/: boundary_conditions.cpp  boundary_conditions.hpp  boundary_conditions_2d.cpp  boundary_conditions_2d.hpp  boundary_conditions_3d.cpp  boundary_conditions_3d.hpp
src/fea/elements/: c3d6.cpp  c3d6.hpp  c3d8.cpp  c3d8.hpp
src/fea/elts/: c2d4.cpp  c2d4.hpp  c3d6.cpp  c3d6.hpp  c3d8.cpp  c3d8.hpp  element.cpp  element.hpp  element2d.hpp  element3d.cpp  element3d.hpp
src/fea/loads/: loads.hpp  loads_2d.cpp  loads_2d.hpp
src/nlo/: CMakeLists.txt  levenberg_marquardt.cpp  levenberg_marquardt.hpp
src/vis/: vis.cpp  vis.hpp
src_lm/: CMakeLists.txt
src_lm/src/: main.cpp
